methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:4: error: type mismatch;
 found   : Unit
 required: Boolean
    if (isFacingTrail()) {
                     ^SlugSnail:11: error: type mismatch;
 found   : Unit
 required: Boolean
      if (isFacingTrail()) {
                       ^